# pdi

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml  desktop-release.yml
app/: README.md  package-lock.json  package.json
app/src/: App.tsx  api.ts  store.tsx  styles.css
app/src/screens/: Audit.tsx  Keys.tsx  Overview.tsx  Positions.tsx  Records.tsx  Settings.tsx  Tenants.tsx
docs/: enterprise.md  operations.md  positions.md  releasing.md  tandem.md
docs/desktop/: build.py
docs/screens/: build.py
native/: README.md
native/android/: README.md  settings.gradle.kts
native/android/app/: build.gradle.kts
native/ios/: README.md  project.yml
native/ios/Sources/: ApiClient.swift  AppState.swift  PdiVaultApp.swift  Theme.swift
native/ios/Sources/Views/: AuditView.swift  (+6 more)
native/windows/: ApiClient.cs  App.xaml  App.xaml.cs  AppState.cs  MainWindow.xaml  MainWindow.xaml.cs  PdiVault.csproj  README.md  app.manifest
native/windows/Views/: AuditPage.xaml  AuditPage.xaml.cs  ConnectorsPage.xaml  ConnectorsPage.xaml.cs  OverviewPage.xaml  OverviewPage.xaml.cs  RobotsPage.xaml  RobotsPage.xaml.cs  ShellPage.xaml  ShellPage.xaml.cs  TransfersPage.xaml  TransfersPage.xaml.cs  VaultPage.xaml  VaultPage.xaml.cs  WelcomePage.xaml  WelcomePage.xaml.cs
pdi/: api.py  app_connectors.py  audit.py  catalog.py  compliance.py  connectors.py  crypto.py  db.py  i18n.py  intakes.py  models.py  positions.py  retention.py  robotics.py  seed.py  transfers.py  vault.py
pdi/tests/: test_app_connectors.py  test_catalog.py  test_connectors.py  test_contributions.py  test_intakes.py  test_keymgmt_retention.py  test_language_provenance.py  test_pdi.py  test_positions.py  test_rbac_dr.py  test_robots.py  test_starter_vault.py  test_token_hashing.py  test_transfers.py
(+7 files in other folders)
