[project]
name = "pdi"
version = "0.1.0"
description = "Private Data Infrastructure — secure private encrypted data vault with compliance/audit"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "cryptography>=41",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pdi*"]

[tool.pytest.ini_options]
testpaths = ["pdi/tests"]
