[project]
name = "pdi"
version = "0.1.0"
description = "Private Data Infrastructure — encrypted vault, tenant isolation, tamper-evident audit"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "David Bianchi" }]
keywords = ["encryption", "vault", "aes-gcm", "audit", "multi-tenant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "cryptography>=41",
    "segno>=1.6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/davidsbianchi1984/pdi"
Repository = "https://github.com/davidsbianchi1984/pdi"
Changelog = "https://github.com/davidsbianchi1984/pdi/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pdi*"]

[tool.pytest.ini_options]
filterwarnings = ["ignore:Using `httpx` with `starlette.testclient` is deprecated"]
testpaths = ["pdi/tests"]
